modified educational skill

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <ul>
                             <li><span>Knowledge of Business Intelligence (BI) applications and Visualization technologies.</span></li>
                             <li><span class ="clr"> Visualization tools </span><br> Power BI, Tableau</li>
-                            <li><span class="clr">Software Tools</span><br>Talend, Tableau, Visual Studio, JUPYTER  notebook ,SQL</li>
+                            <li><span class="clr">Software Tools</span><br>Talend, Visual Studio, JUPYTER  notebook ,SQL</li>
                             <li><span>Knowledge of ML model Statistical data analysis</span></li>
                             <li><span>SQL queries operations in database</span></li>
                             <li><span>Amazon Web Services</span></li>
