--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                     <div class="social-icons">
                         <a href="www.linkedin.com/in/prithvi-kaklotar-49a449149"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
-                    <a href="" download class="btn btn2">Download CV</a>
+                    <a href="images/prithvi_resume (1).pdf" download class="btn btn2">Download CV</a>
                 </div>
                 <!--<div class="contact-right">
                     <form>
