--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                     <div class='tab-titles'>
                         <p class="tab-links active-link" onclick="opentab('Skills')">Skills</p>
                         <p class="tab-links" onclick="opentab('Education')">Education</p>
+                        <p class="tab-links" onclick="opentab('Experience')">Education</p>
 
                     </div>
                     <div class="tab-contents active-tab" id="Skills">
@@ -64,6 +65,14 @@
                             <li><span class="clr">2017-2021</span><br>BTech Electrical Engineering</li>
                             <li><span class="clr">2021-2022</span><br>Big Data</li>
                             <li><span class="clr">Jan 2023-ongoing</span><br>Artificial Intelligence</li>
+                        </ul>
+                    </div>
+                    <div class="tab-contents" id="Experience">
+                        <ul>
+                            <li><span class="clr">Company</span><br>Promly</li>
+                            <li><span class="clr">May 2022 - August 2022</span><br>Data Analysis</li>
+                            <li><span class="clr">Job Description</span><br>Web scraping, data analysis and building dashboards with insights</li>
+                            
                         </ul>
                     </div>
 
