--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <div class='tab-titles'>
                         <p class="tab-links active-link" onclick="opentab('Skills')">Skills</p>
                         <p class="tab-links" onclick="opentab('Education')">Education</p>
-                        <p class="tab-links" onclick="opentab('Experience')">Education</p>
+                        <p class="tab-links" onclick="opentab('Experience')">Experience</p>
 
                     </div>
                     <div class="tab-contents active-tab" id="Skills">
