--- a/index.html
+++ b/index.html
@@ -87,6 +87,18 @@
             <div class="services-list">
                 <div>
                     <i class="fa-sharp fa-solid fa-magnifying-glass-chart"></i>
+                    <h2>Personal Algo trading project (2023 ) #favourite</h2>
+                    <p> •	Used ocr tech and pygui to collect data as the financial data was not easily available through api of the website
+                        •	Preprocessing the data clean, analyzing trends preparing a ready to use data in excel
+                        •	Creating a algorithm that tracks the value based on candlesticks to generate buy and sell signals 
+                        •	Tested the algo in jupyter environment creating a paper trade environment
+                        •	Future updates would be test the algo in real time market via paper trade using brokers api
+
+                        </p>
+                    <a href="#">Learn more</a>
+                </div>
+                <div>
+                    <i class="fa-sharp fa-solid fa-magnifying-glass-chart"></i>
                     <h2>Social Data Minning</h2>
                     <p> •	Used NLP techniques to refine the data and develop a better insight on the data
                         •	Used lemmatization stemming word tokenization to develop a text classification
